pieter_temmerman/session-01/exercise-03/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-03
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 25
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 25
          periodSeconds: 10
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
