pieter_temmerman/session-01/exercise-03/rds-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rds-external-db-svc
  namespace: exercise-03
spec:
  type: ExternalName
  externalName: kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
